# toy_backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  readme.md  secrets.json
api/: Cargo.toml
api/src/: lib.rs  main.rs  string.rs
migrations/: 0000_initial.sql  0001_friends.sql
migrator/: Cargo.toml
migrator/src/: lib.rs
src/: main.rs  no_cache.rs  pages.rs  secrets.rs
templates/: base.html  hello.html  index.html  user.html  users.html
test_client/: Cargo.toml
test_client/src/: main.rs
