[workspace]
members = [
  ".",
  "api",
  "migrator",
  "test_client",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.lints.rust]
unsafe_code = "warn"
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# Cargo
# cargo_common_metadata = "warn"
wildcard_dependencies = "warn"

# Restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
exit = "warn"
string_to_string = "warn"
undocumented_unsafe_blocks = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
print_stderr = "warn"
print_stdout = "warn"

# Nursery
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
significant_drop_tightening = "allow"
suboptimal_flops = "allow"
option_if_let_else = "allow"
needless_collect = "allow"

# Pedantic
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
default_trait_access = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[package]
name = "toy_backend"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
api.path = "api"
migrator.path = "migrator"

anyhow.workspace = true
dotenvy.workspace = true
chrono.workspace = true
rand.workspace = true
secrecy.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true

argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.7.9"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
tera = "1.20.0"
tower-http = { version = "0.6.2", features = ["trace"] }

[build-dependencies]
migrator.path = "migrator"

dotenvy.workspace = true
sqlx.workspace = true
tokio.workspace = true

[profile.release]
lto = "fat"

[profile.dev.package.sqlx-macros]
opt-level = 3

[lints]
workspace = true

[features]
tls = []
