[package]
name = "api"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
secrecy.workspace = true

arrayvec = { version = "0.7.6", features = ["serde", "zeroize"] }
schemars = { version = "0.8.21", features = ["arrayvec07"] }
